<resources>
    <string name="app_name">一图识字</string>
    <string name="title_home">主页</string>
    <string name="title_dashboard">历史</string>
    <string name="title_saomiao">拍照识字</string>
    <string name="title_tuku">图库选择</string>
    <string name="title_exit">退出</string>
    <string name="title_author">关于程序</string>
    <string name="title_my">我的</string>
    <string name="title_username">未登录</string>
    <string name="title_login">登录</string>
    <string name="title_regis">注册</string>s
    <string name="title_loginWX">微信一键登录</string>
    <string name="title_loginQQ">QQ一键登录</string>
    <string name="title_user">用户名</string>
    <string name="title_pass">密码</string>
    <string name="title_shezhi">设置</string>
    <string name="title_fuzhi">复制</string>
    <string name="title_save">保存</string>
    <string name="title_reader">朗读</string>
    <string name="title_fanyi">翻译</string>
    <string name="text_erro">无数据！</string>
    <string name="title_result">文字识别结果</string>
    <string name="title_tishi">右滑删除记录,双击查看记录</string>
    <string name="shezhi_video">视频背景</string>
    <string name="shezhi_start">启动页面</string>
    <string name="shezhi_tuijian">个性化推荐</string>
    <string name="shezhi_save">自动保存</string>
    <string name="shezhi_update">版本更新</string>
    <string name="author_one">本软件有幻彩希及其团队开发</string>
    <string name="author_1">未经允许 不可用作商业用途</string>
    <string name="author_2">只供学习和交流</string>
    <string name="author_3">隐私政策</string>
    <string name="author_4">本隐私政策将帮助您了解以下主要政策: \n1)我们不会收集您的必要信息; \n2)我们不会向第三方共享、提供、转让或者从第三方获取</string>
    <string name="author_5">第三方服务：</string>
    <string name="author_6">3.百度SDK\n提供方名称:百度\n场景描述:针对App的各维度的文字识别功能\n收集方式:调用系统相关接口自动采集个人信息类型:个人常用设备信息、位置信息、网络信息、个人通信信息个人信息字段:设备信息:设备标识符(IME、IDFA、Adroid id、MAC、OAD等相关信息)、应用信息(应用崩溃信息、通知开关状态、软件列表等相关信息)、设备参数及系统信息(设备类型、设备型号、操作系统及硬件相关信息)\n网络信息:卩P地址,WF信息,基站信息等相关信息\n用途或目的:用于统计详细崩溃日志以及行为分析\n是否为必要信息:是\n信息处理方式:采用去标识化方式对个人信息进行脱敏展示</string>
    <string name="author_7">使用帮助</string>
    <string name="author_8">点击相机按钮，打开相机或图库，选择带有文字的图片，文字尽量和相机的选择框平行，以免识别错误或失败 \n注意,本软件需要的系统权限：\n需要调用相机进行拍照\n应用联网，发送请求数据至服务器，获得识别结果。\n图片裁剪临时存储和读取。\n请授予软件完整权限，否则软件功能将无法使用。</string>
    <string name="author_10">——————————————————————</string>
    <string name="author_12">点击图片保存</string>
    <string name="author_13">反馈</string>
    <string name="author_14">关注微信订阅号，查找更多资源，反馈信息第一时间处理</string>
    <string name="title_tiaoguo">跳过</string>
    <string name="title_delete">删除</string>
    <string name="title_look">查看</string>
    <string name="title_exitLogin">退出登录</string>
    <string name="title_textSize">字体大小</string>
    <string name="title_noLogin">请先登录！</string>
</resources>