<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:orientation="vertical">

    <include layout="@layout/title_camera_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="70dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_picture"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:editable="true"
                android:longClickable="true"
                android:padding="10dp"
                android:text="@string/text_erro"
                android:textColor="@color/black"
                android:textIsSelectable="true"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/text_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_top_soild"
                android:gravity="right"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/text_fanyi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textIsSelectable="true"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-110dp"
        android:layout_marginBottom="70dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/title_textSize" />

        <SeekBar
            android:id="@+id/text_seekbar"
            android:layout_width="300dp"
            android:layout_height="31dp"
            android:layout_gravity="center"
            android:max="50"
            android:min="10"
            android:progress="18" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-70dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <com.unstoppable.submitbuttonview.SubmitButton
            android:id="@+id/btn_copy"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            app:buttonText="@string/title_fuzhi" />

        <com.unstoppable.submitbuttonview.SubmitButton
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            app:buttonText="@string/title_save" />

        <com.unstoppable.submitbuttonview.SubmitButton
            android:id="@+id/btn_reader"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            app:buttonText="@string/title_reader" />

        <com.unstoppable.submitbuttonview.SubmitButton
            android:id="@+id/btn_fanyi"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            app:buttonText="@string/title_fanyi" />
    </LinearLayout>

</LinearLayout>