<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_f3"
    android:orientation="vertical"
    tools:context=".ui.shezhi.ShezhiFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/border_layout">

        <WebView
            android:id="@+id/web_shezhi"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ImageView
            android:id="@+id/shezhi_loginImg"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/icon_people"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.337" />

        <TextView
            android:id="@+id/shezhi_loginName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/title_login"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shezhi_loginImg" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_layout"
        android:orientation="horizontal"
        android:padding="5dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <TextView
            android:id="@+id/shezhi_start"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/shezhi_start"
            android:textSize="20sp" />

        <com.suke.widget.SwitchButton
            android:id="@+id/switchBtn_2"
            android:layout_width="97dp"
            android:layout_height="48dp"
            android:layout_marginTop="0dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_layout"
        android:orientation="horizontal"
        android:padding="5dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <TextView
            android:id="@+id/shezhi_tuijian"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/shezhi_tuijian"
            android:textSize="20sp" />

        <com.suke.widget.SwitchButton
            android:id="@+id/switchBtn_3"
            android:layout_width="97dp"
            android:layout_height="48dp"
            android:layout_marginTop="0dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_layout"
        android:orientation="horizontal"
        android:padding="5dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <TextView
            android:id="@+id/shezhi_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/shezhi_save"
            android:textSize="20sp" />

        <com.suke.widget.SwitchButton
            android:id="@+id/switchBtn_4"
            android:layout_width="97dp"
            android:layout_height="48dp"
            android:layout_marginTop="0dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_author"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/check_border_blue"
            android:paddingStart="10dp"
            android:text="@string/title_author"
            android:textAlignment="textStart"
            android:textColor="@color/new_black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_update"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/check_border_blue"
            android:paddingStart="10dp"
            android:text="@string/shezhi_update"
            android:textAlignment="textStart"
            android:textColor="@color/new_black"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>